--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
 
   </head>
   <body>
-
+    <nav class="nav-arc">
+          <ul class="wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.5s">
+		  <!--#if($currentUser)-->
+            <li>
+              <a href="" data-target="">Log Out</a>
+            </li>
+			<li>
+              <a href="" data-toggle="modal" data-target="">Welcome back, <!--$msg.get("USERNAME", $currentUser)--></a>
+            </li>
+          <!--#else-->
+            <li>
+              <a href="" data-toggle="modal" data-target="#signup-modal">Sign Up</a>
+            </li>
+            <li>
+              <a href="" data-toggle="modal" data-target="#login-modal">Log In</a>
+            </li>
+		  <!--#end-->
+          </ul>
+    </nav>
+    <!-- Navbar End -->   
     <!-- Header Section Start -->
     <header id="hero-area" data-stellar-background-ratio="0.5">    
       <div class="container">      
@@ -564,12 +583,45 @@
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
-    </div>     
-
+    </div>
+	
+	<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="arcmodalLabel" aria-hidden="true" style="display: none;">
+      <div class="modal-dialog">
+		<div class="arcmodal-container">
+		  <h1>Log in to Arcaena</h1><br>
+			<form>
+			  <input type="text" name="email" placeholder="Email Address">
+			  <input type="password" name="pass" placeholder="Password">
+			  <input type="submit" name="login" class="login arcmodal-submit" value="Log In">
+			</form>
+		  <div class="login-help">
+		  <a href="#">Forgot Password</a>
+		</div>
+	  </div>
+	</div>
+  </div>
+  <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true" style="display: none;">
+      <div class="modal-dialog">
+		<div class="arcmodal-container">
+		  <h1>Sign up for Arcaena</h1><br>
+			<form>
+			  <input type="text" name="user" placeholder="Username">
+			  <input type="text" name="email" placeholder="Email Address">
+			  <input type="text" name="emailConfirm" placeholder="Confirm Email Address">
+			  <input type="password" name="pass" placeholder="Password">
+			  <input type="submit" name="login" class="login arcmodal-submit" value="Sign Up">
+			</form>
+		  <div class="login-help">
+		    <p>You will be able to create a character once you log in.</p>
+		</div>
+	  </div>
+	</div>
+  </div>
+	
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="js/jquery-min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>  
     <script src="js/wow.js"></script>   
     <script src="js/main.js"></script>
 
