Fixed parallax with stellar.js

--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
     <script src="js/wow.js"></script>   
     <script src="js/main.js"></script>
 
