Default page for /buttons

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -4,17 +4,17 @@
     <!-- Required meta tags -->
     <title>Arcaena - Launcher Buttons Test</title>
 	
-	<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+	<link rel="shortcut icon" type="../image/png" href="favicon.ico"/>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
   </head>
   <style>
   @font-face{
     font-family: "Inheritance";
-    src: url('buttons/Inheritance.ttf')
+    src: url('Inheritance.ttf')
 }
 
  body {
@@ -32,7 +32,7 @@
  }
  
  .button{
-    background:url(buttons/button-normal.png) no-repeat; 
+    background:url(button-normal.png) no-repeat; 
     cursor:pointer;
     border:none;
 	width: 286px;
@@ -45,15 +45,15 @@
   }
   
   .button:hover {
-    background:url(buttons/button-rollover.png) no-repeat;
+    background:url(button-rollover.png) no-repeat;
   }
   
     .button:active {
-    background:url(buttons/button-press.png) no-repeat;
+    background:url(button-press.png) no-repeat;
   }
   
   .button-disabled {
-    background:url(buttons/button-unavailable.png) no-repeat; 
+    background:url(button-unavailable.png) no-repeat; 
     cursor:pointer;
     border:none;
 	width: 286px;
@@ -72,7 +72,7 @@
 	  	<h2>Launcher Buttons Testing</h2>
 		<h3>Button Styles Testing</h3>
 		<br>
-		<h4><a href="buttons/buttons.zip">Download All</a></h4>
+		<h4><a href="buttons.zip">Download All</a></h4>
 		<br>
 		 <div class="row">
           <div class="col-lg-12 col-md-12 col-xs-12">
@@ -101,49 +101,49 @@
                  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
                     <div class="text">
                       <h5>button-normal.png</h5>
-                      <img src="buttons/button-normal.png" /img>
+                      <img src="button-normal.png" /img>
                     </div>
                   </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>button-press.png</h5>
-                      <img src="buttons/button-press.png" /img>
+                      <img src="button-press.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>button-rollover.png</h5>
-                      <img src="buttons/button-rollover.png" /img>
+                      <img src="button-rollover.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>button-unavailable.png</h5>
-                      <img src="buttons/button-unavailable.png" /img>
+                      <img src="button-unavailable.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>square-button-normal.png</h5>
-                      <img src="buttons/square-button-normal.png" /img>
+                      <img src="square-button-normal.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>square-button-press.png</h5>
-                      <img src="buttons/square-button-press.png" /img>
+                      <img src="square-button-press.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>square-button-rollover.png</h5>
-                      <img src="buttons/square-button-rollover.png" /img>
+                      <img src="square-button-rollover.png" /img>
                     </div>
 				  </div>
 				  <div class="col-lg-3 col-sm-6 col-xs-12 box-item">
 					<div class="text">
                       <h5>square-button-unavailable.png</h5>
-                      <img src="buttons/square-button-unavailable.png" /img>
+                      <img src="square-button-unavailable.png" /img>
                     </div>
 				  </div>
               </div>
