--- a/skins/index.html
+++ b/skins/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="arcaena, mmo, rpg, game, alagaesia, eragon, eldest, brisingr, inheritance, inheritance cycle, mmorpg, mcalagaesia, dragon, minecraft">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="author" content="MCAlagaesia">
+	<meta name="description" content="The Inheritance Cycle MMORPG. Explore the world of Alagaesia in a game of magic, dragons and adventure.">
     <title>Arcaena - Skin Submissions</title>
 	
 	<link rel="shortcut icon" type="../image/png" href="../favicon.ico"/>
@@ -9,71 +16,62 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/main.css">  
 
   </head>
   <style>
-  @font-face{
-    font-family: "Inheritance";
-    src: url('Inheritance.ttf')
-}
-
  body {
  background-color: #333;
  color: #fff;
  padding: 30px;
  }
  
- .text {
- padding: 30px;
- }
- 
- img {
- max-width: 100%;
- }
- 
- .button{
-    background:url(button-normal.png) no-repeat; 
-    cursor:pointer;
-    border:none;
-	width: 286px;
-	height: 106px;
-	color: #fff;
-	font-size: 30px;
-	font-family: Inheritance;
-	
-	text-shadow: 3px 3px #000;
-  }
-  
-  .button:hover {
-    background:url(button-rollover.png) no-repeat;
-  }
-  
-    .button:active {
-    background:url(button-press.png) no-repeat;
-  }
-  
-  .button-disabled {
-    background:url(button-unavailable.png) no-repeat; 
-    cursor:pointer;
-    border:none;
-	width: 286px;
-	height: 106px;
-	color: #A9A9A9;
-	font-size: 30px;
-	font-family: Inheritance;
-	
-	text-shadow: 3px 3px #000;
-  }
-  
-  p {
+ p {
     font-size: 22px;
   }
   
  </style>
   <body>
-    <!-- Game Section End -->
+      <nav class="nav-arc">
+          <ul class="wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.5s">
+		  <!--#if($currentUser)-->
+            <li>
+              <a href="" data-target="">Log Out</a>
+            </li>
+			<li>
+              <a href="" data-toggle="modal" data-target="">Welcome back, <!--$msg.get("USERNAME", $currentUser)--></a>
+            </li>
+          <!--#else-->
+            <li>
+              <a href="" data-toggle="modal" data-target="#signup-modal">Sign Up</a>
+            </li>
+            <li>
+              <a href="" data-toggle="modal" data-target="#login-modal">Log In</a>
+            </li>
+		  <!--#end-->
+          </ul>
+    </nav>
+    <!-- Navbar End -->   
+    <!-- Header Section Start -->
+    <header id="hero-small" data-stellar-background-ratio="0.5">    
+      <div class="container">      
+        <div class="row justify-content-md-center">
+          <div class="col-md-10">
+            <div class="contents text-center">
+              <img class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s" src="../img/title.png" alt="Arcaena Logo" /img>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Secrets of Alagaesia</p>
+			  <br>
+			  <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Design a Skin for Arcaena</h2>
+			  <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">News and Develogs from the team behind Arcaena</p>
+            </div>
+          </div>
+        </div> 
+      </div>           
+    </header>
+    <!-- Header Section End -->
+	
       <div class="container">
-	  	<h2>Design a Skin for Arcaena</h2>
 		<img src="../img/features/characters.png" alt="Design a Skin for Arcaena" style="max-width: 50%;">
 		<p><b>When you create a character in Arcaena, you'll be able to select a skin from a list of quality skins that we've curated just for the game.</b><br>During the development phase, we'd like to give you the opportunity to design one or more skins that will be available to choose!</p>
 		<p>If you'd love to contribute a skin to see your own work in the game, use one of the templates below.<br>Arcaena skins are slightly different from Minecraft skins. They're 128 pixels in width and height, whereas default Minecraft skins are 64 pixels in both dimensions.</p>
@@ -96,5 +94,13 @@
 		<p>Remember that submitting a skin is no guarantee that it will be used in the game. It should be of high quality and feature a medieval human, elf, dwarf or Urgal.</p>
 		<p><b>We're looking forward to seeing what you come up with!</b></p>
 	  </div>
+
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="../js/jquery-min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="../js/jquery.stellar.min.js"></script>
+    <script src="../js/wow.js"></script>   
+    <script src="../js/main.js"></script>
   </body>
 </html>
