--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="section-header">          
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">The Game</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"><i>Arcaena</i> is a Massively Multiplayer Online Role Playing Game (MMORPG) built on the insanely popular sandbox game <i>Minecraft</i>, bringing Christopher Paolini's world of Alagaesia to life in a one-of-a-kind, world-first multiplayer experience.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"><i>Arcaena</i> is a Massively Multiplayer Online Role-Playing Game (MMORPG) built on the insanely popular sandbox game <i>Minecraft</i>, bringing Christopher Paolini's world of Alagaesia to life in a one-of-a-kind, world-first multiplayer experience.</p>
         </div>
       </div>
     </section>
@@ -82,7 +82,7 @@
             <div class="col-lg-8 col-md-12 col-xs-12">
               <div class="container">
                 <div class="text">
-                      <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">There was a time when modding Minecraft meant hours of tedidious downloading, careful configuring and client crashing.</p>
+                      <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">There was a time when modding Minecraft meant hours of tedious downloading, careful configuring and client crashing.</p>
 					  <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">The <i>Arcaena</i> Launcher changes that, installing the game quickly with a single click!</p>
 					  <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Arcaena is also free to play. All you need to do is log in with your Arcaena account, and no Minecraft account is required!</p>
                 </div>
@@ -189,7 +189,7 @@
           <div class="section-header">          
             <h2 class="section-title">Characters</h2>
             <hr class="lines">
-            <p class="section-subtitle">Create a Chararcter</p>
+            <p class="section-subtitle">Create a Character</p>
           </div>
           <div class="row">
 		    <div class="col-lg-4 col-xs-12">
@@ -445,7 +445,7 @@
                     </span>
                     <div class="text">
                       <h4>Gems</h4>
-                      <p>Your body can only store so much energy. Siphon off the excess into gems! But be careful, nobody who has broken a gem full of energy has lived to tell the tale...</p>
+                      <p>Your body can only store so much energy. Siphon off the excess into gems! But be careful, nobody who has broken a jewel full of energy has lived to tell the tale...</p>
                     </div>
                   </div>
 				  <div class="col-lg-4 col-sm-6 col-xs-12 box-item">
@@ -454,7 +454,7 @@
                     </span>
                     <div class="text">
                       <h4>Spirits</h4>
-                      <p>These magical beings float through Alagaesia, performing powerful acts of magic when it strikes their fancy.</p>
+                      <p>These magical beings float through Alagaesia, performing mighty acts of magic when it strikes their fancy.</p>
                     </div>
                   </div>
 				  <div class="col-lg-4 col-sm-6 col-xs-12 box-item">
@@ -560,7 +560,7 @@
           <!-- Footer Links -->
           <div class="col-lg-6 col-sm-6 col-xs-12">
 		    <div class="copyright">
-		      <p>The Inheritance Cycle and Alagaesia are property of Christopher Paolini and affiliated publishers. Arcaena and The MCAlagaesia Project are not affiliated with Mojang AB or Microsoft Studios</p>
+		      <p>The Inheritance Cycle and Alagaesia are the property of Christopher Paolini and affiliated publishers. Arcaena and The MCAlagaesia Project are not affiliated with Mojang AB or Microsoft Studios.</p>
 			</div>
           </div>
           <div class="col-lg-6 col-sm-6 col-xs-12">
