Deny it ever said 2019.

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               <div class="contact-us">
                 <h3>Release of <i>Arcaena</i></h3>
                 <p style="font-size: 18px;
-">Arcaena is releasing in 2019. Follow us on social media and bookmark this page so you don't forget!</p>
+">Arcaena is releasing soon. Follow us on social media and bookmark this page so you don't forget!</p>
 				<div class="social-icons">
                   <ul>
                     <li class="facebook"><a rel="me" title="Arcaena Facebook Page" href="https://www.facebook.com/TheArcaena/" target="_blank"><i class="fab fa-facebook"></i> /TheArcaena</a></li>
