Update Discord link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 <div class="text">
                       <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">There was a time when modding Minecraft meant hours of tedious downloading, careful configuring and client crashing.</p>
 					  <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">The <i>Arcaena</i> Launcher changes that, installing the game quickly with a single click!</p>
-					  <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Arcaena is also free to play. All you need to do is log in with your Arcaena account, and no Minecraft account is required!</p>
                 </div>
               </div>
             </div>
@@ -520,7 +519,7 @@
                     <li class="facebook"><a rel="me" title="Arcaena Facebook Page" href="https://www.facebook.com/TheArcaena/" target="_blank"><i class="fab fa-facebook"></i> /TheArcaena</a></li>
                     <li class="twitter"><a rel="me" title="Arcaena Twitter Account" href="https://twitter.com/TheArcaena" target="_blank"><i class="fab fa-twitter"></i> @TheArcaena</a></li>
 					<li class="youtube"><a rel="me" title="Arcaena YouTube Channel" href="https://www.youtube.com/channel/UCupEFp87lcFhie6UWWVu8TA" target="_blank"><i class="fab fa-youtube" target="_blank"></i> @TheArcaena</a></li>
-					<li class="discord"><a rel="me" title="Arcaena Discord Server" href="https://discord.gg/arcaena" target="_blank"><i class="fab fa-discord"></i> discord.gg/arcaena</a></li>
+					<li class="discord"><a rel="me" title="Arcaena Discord Server" href="https://arcaena.com/discord" target="_blank"><i class="fab fa-discord"></i> discord.gg/arcaena</a></li>
                   </ul>
                 </div>
               </div>
